<resources>
    <string name="app_name" translatable="false">Domotic Home ArduDodo</string>
    <string name="kitchen">Cucina</string>
    <string name="bigBedroom">Camera da letto</string>
    <string name="littleBedroom">Cameretta</string>
    <string name="bathroom">Bagno</string>
    <string name="tv_paginaprincipale" translatable="false">by Andrea e Alessio</string>


    <string name="switch_kitchen">CUCINA</string>
    <string name="switch_box">BOX</string>
    <string name="switch_lobby">CORRIDOIO</string>
    <string name="seek_name">CUCINA:</string>
    <string name="tv_temperature">TEMPERATURA</string>
    <string name="tv_humidity">UMIDITA</string>


    <string name="switch_bed">LETTO</string>
    <string name="switch_bedsidetable_anna">COMODINO ANNA</string>
    <string name="switch_bedsidetable_sergio">COMODINO SERGIO</string>
    <string name="seek_left">SINISTRA:</string>
    <string name="seek_right">DESTRA:</string>


    <string name="switch_littlebedroom">CAMERETTA</string>
    <string name="seek_littlebedroom">CAMERETTA:</string>
    
    
    <string name="switch_bathroom">BAGNO</string>
    <string name="switch_wc">BAGNO WC</string>
    <string name="switch_washbasin">LAVABO</string>
    <string name="switch_fan">VENTOLA</string>



    <string name="settings">Impostazioni</string>
    <string name="lights_day">LUCI CORTESIA MOD. GIORNO</string>
    <string name="time_day">ORA:</string>
    <string name="intensity_day">INTENSITA:</string>
    <string name="lights_night">LUCI CORTESIA MOD. NOTTE</string>
    <string name="time_night">ORA:</string>
    <string name="intensity_night">INTENSITA:</string>
    <string name="bathroom_fan">VENTOLA BAGNO</string>
    <string name="min_auto_off">MIN. AUTO OFF</string>
    <string name="date_time">DATA e ORA</string>
    <string name="date">DATA:</string>
    <string name="time">ORA</string>
    <string name="luminosity">LUMINOSITA</string>
    <string name="i2c">I2C</string>
    <string name="reset_blinds">RESET TAPPARELLE</string>
    <string name="reset_all">TUTTE</string>
    <string name="reset_kitchen">CUCINA</string>
    <string name="reset_bedLeft">LETTO SX</string>
    <string name="reset_bedRight">LETTO DX</string>
    <string name="reset_kidBedroom">CAMERETTA</string>
</resources>
