<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cucina"
    android:text="@string/kitchen"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cameraLetto"
        android:text="@string/bigBedroom"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cameretta"
        android:text="@string/littleBedroom"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bagno"
        android:text="@string/bathroom"/>

</LinearLayout>