<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/settings"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="@color/redDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_titolo_impostazioni"
            android:layout_weight="0.10"/>

        <TextView
            android:text="@string/lights_day"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/nero"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_luciGiorno"
            android:layout_weight="0.10"/>

        <TextView
            android:text="@string/time_day"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ora"
            android:layout_weight="0.10"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:id="@+id/et_cor_day"/>

        <TextView
            android:text="@string/intensity_day"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_intensita"
            android:layout_weight="0.10"/>

        <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:max="10"
            android:progress="3"
            android:id="@+id/sb_cor_day" />

        <TextView
            android:text="@string/lights_night"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/nero"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_luciNotte"/>

        <TextView
            android:text="@string/time_night"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ora_notte"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/et_cor_night" />

        <TextView
            android:text="@string/intensity_night"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_intensita_notte"/>

        <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:max="10"
            android:progress="3"
            android:id="@+id/sb_cor_night" />

        <TextView
            android:text="@string/bathroom_fan"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/nero"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ventola" />

        <TextView
            android:text="@string/min_auto_off"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_min_auto_off" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/et_ventola" />

        <TextView
            android:text="@string/date_time"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/nero"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dataOra"/>

        <TextView
            android:text="@string/date"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_data"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/et_date" />

        <TextView
            android:text="@string/time"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tempo"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/et_time" />

        <TextView
            android:text="@string/luminosity"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lux" />

        <TextView
            android:text="@string/i2c"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_i2c" />

        <TextView
            android:text="@string/reset_blinds"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/nero"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tapparelle" />

        <Button
            android:text="@string/reset_all"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_rst_all" />

        <Button
            android:text="@string/reset_kitchen"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_rst_kitchen" />

        <Button
            android:text="@string/reset_bedRight"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_rst_bdroom_dx" />

        <Button
            android:text="@string/reset_bedLeft"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_rst_bdroom_sx" />

        <Button
            android:text="@string/reset_kidBedroom"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_rst_kidsroom" />

    </LinearLayout>
</ScrollView>
